--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-data/kyiv_speeds_delay.RDS filter=lfs diff=lfs merge=lfs -text
+output/kyiv_speeds_delay.RDS filter=lfs diff=lfs merge=lfs -text
+kyiv_speeds_delay.RDS filter=lfs diff=lfs merge=lfs -text
